# ikapati-research

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements-core.txt  requirements.txt  setup.py
docs/: Makefile  commands.rst  conf.py  index.rst  make.bat
ikapati/: __init__.py
ikapati/app/: server.py
ikapati/data/: __init__.py  image_processing.py  io.py  make_dataset.py  utils.py
ikapati/models/: __init__.py  evaluate_model.py  predict_model.py  train_model.py
ikapati/visualization/: visualize.py
models/: 480022e1-5061-4e65-b40f-7c655b699e7e.h5  480022e1-5061-4e65-b40f-7c655b699e7e.tflite  Corn.h5  Pepper.h5  corn.h5  model.py
models/fashion/: model-weights.h5  model.json
notebooks/: 1.0-agj-data-exploration.ipynb  2.0-agj-image-preprocessing.ipynb  2.1-agj-image-preprocessing.ipynb  3.0-agj-training.ipynb  3.1-agj-training-batch.ipynb  4.0-agj-evaluation.ipynb  4.1-agj-evaluate-Apple.ipynb  4.1-agj-evaluate-Corn.ipynb  4.1-agj-evaluate-Potato.ipynb  4.1-agj-evaluate-Tomato.ipynb  4.2-agj-evaluate-Apple.ipynb  4.2-agj-evaluate-Tomato.ipynb  5.0-agj-evaluation-all.ipynb
notebooks/tutorials/: cnn-tensorflow-python-sagemaker.ipynb  cnn-tensorflow-python.ipynb  seaborn-tutorial.ipynb  train-dropout.py  train.py
reports/: citations.bib  evaluation.csv  proposal.tex  report.tex
reports/figures/: data_exploration.tex
reports/proposal/: README.md
src/data/: image_processing.py  io.py  make_dataset.py  utils.py
src/models/: predict_model.py  train_model.py
src/visualization/: visualize.py
(+8 files in other folders)
