[tool.poetry]
name = "ikapati"
version = "0.1.0"
description = "Plant disease detection"
authors = ["AJ <bitjockey@jackpoint.network>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6.1"
tensorflow-gpu = "^2.1.0"
Pillow = "^7.0.0"
numpy = "^1.18.1"
scikit-learn = "^0.22.1"
pandas = "^1.0.1"
seaborn = "^0.10.0"
flask = "^1.1.1"
click = "^7.0"
python-dotenv = "^0.11.0"

[tool.poetry.dev-dependencies]
Sphinx = "^2.4.1"
coverage = "^5.0.3"
flake8 = "^3.7.9"
awscli = "^1.18.0"
jupyterlab = "^1.2.6"

[tool.poetry.scripts]
ikapati-data = 'ikapati.data.make_dataset:main'
ikapati-train = 'ikapati.models.train_model:main'
ikapati-eval = 'ikapati.models.evaluate_model:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"